--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile_rarity_mapper",
-  "version": "0.2.18",
+  "version": "0.2.19",
   "private": true,
   "type": "module",
   "scripts": {
@@ -18,6 +18,7 @@
   "license": "MIT",
   "description": "Standalone mobile adaptation shell for eBird rarity mapping",
   "devDependencies": {
+    "typescript": "^5.9.3",
     "vite": "^5.4.10"
   },
   "dependencies": {
